kubernetes-manifests/monitoring/alertmanager/alertmanager-bot-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: alertmanager-bot
  name: alertmanager-bot
  namespace: monitoring
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: alertmanager-bot
